--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,307 +1,8 @@
-﻿absl-py==2.3.1
-aif360==0.6.1
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.8.0
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.4.0
-asgiref==3.11.0
-asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.5
-attrs==25.1.0
-babel==2.17.0
-beautifulsoup4==4.14.2
-bleach==6.2.0
-blinker==1.9.0
-Brotli==1.1.0
-cachetools==5.5.2
-catalogue==2.0.10
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpathlib==0.21.0
-cloudpickle==3.1.1
-colorama==0.4.6
-comm==0.2.3
-confection==0.1.5
-contourpy==1.3.3
-cryptography==44.0.1
-cycler==0.12.1
-cymem==2.0.11
-datasets==3.4.1
-debugpy==1.8.17
-decorator==5.2.1
-defusedxml==0.7.1
-dill==0.3.8
-distlib==0.4.0
-distro==1.9.0
-Django==5.2.8
-django-cors-headers==4.9.0
-djangorestframework==3.16.1
-dnspython==2.7.0
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-et_xmlfile==2.0.0
-executing==2.2.1
-fairlearn==0.13.0
-fastapi==0.115.11
-fastjsonschema==2.21.2
-ffmpy==0.6.1
-filelock==3.17.0
-Flask==3.1.0
-flask-cors==5.0.1
-flatbuffers==25.2.10
-fonttools==4.59.0
-fpdf==1.7.2
-fqdn==1.5.1
-frozenlist==1.5.0
-fsspec==2024.12.0
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-api-core==2.24.2
-google-api-python-client==2.48.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-Google-Images-Search==1.4.7
-google-pasta==0.2.0
-googleapis-common-protos==1.69.2
-gradio==5.46.1
-gradio_client==1.13.1
-greenlet==3.1.1
-groovy==0.1.2
-grpcio==1.74.0
-gunicorn==23.0.0
-h11==0.14.0
-h5py==3.14.0
-httpcore==1.0.7
-httplib2==0.22.0
-httpx==0.28.1
-huggingface-hub==0.34.1
-idna==3.10
-imageio==2.37.0
-imbalanced-learn==0.13.0
-importlib_metadata==8.6.1
-inFairness==0.2.3
-instaloader==4.14.1
-ipykernel==7.0.1
-ipython==9.6.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.7
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.5
-jiter==0.12.0
-joblib==1.4.2
-json5==0.12.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==8.6.3
-jupyter_core==5.9.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.10
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.28.0
-jupyterlab_widgets==3.0.15
-keras==3.11.2
-keybert==0.9.0
-kiwisolver==1.4.9
-langchain-core==1.2.7
-langchain-openai==1.1.7
-langcodes==3.5.0
-langgraph==1.0.6
-langgraph-checkpoint==4.0.0
-langgraph-prebuilt==1.0.6
-langgraph-sdk==0.3.3
-langsmith==0.6.4
-language_data==1.3.0
-lazy_loader==0.4
-libclang==18.1.1
-lightgbm==4.6.0
-lime==0.2.0.1
-litellm==1.61.15
-llvmlite==0.45.1
-loguru==0.7.3
-lxml==6.0.0
-marisa-trie==1.2.1
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.5
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.4
-ml_dtypes==0.5.3
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-murmurhash==1.0.12
-namex==0.1.0
-narwhals==1.33.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.5
-nltk==3.9.1
-notebook==7.4.7
-notebook_shim==0.2.4
-numba==0.62.1
-numpy==1.26.4
-openai==2.15.0
-opencv-python==4.11.0.86
-openpyxl==3.1.5
-opt_einsum==3.4.0
-optree==0.17.0
-orjson==3.11.3
-ormsgpack==1.12.1
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.5
-pdfminer.six==20250506
-pdfplumber==0.11.7
-pillow==11.1.0
-pinecone-client==2.2.4
-pinecone-plugin-interface==0.0.7
-pipenv==2025.0.4
-platformdirs==4.5.0
-plotly==6.2.0
-POT==0.9.6.post1
-preshed==3.0.9
-prometheus_client==0.23.1
-prompt_toolkit==3.0.52
-propcache==0.3.0
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==7.1.1
-pure_eval==0.2.3
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydeck==0.9.1
-pydub==0.25.1
-pyfiglet==0.8.post1
-Pygments==2.19.1
-pymongo==4.11.1
-pyparsing==3.2.3
-pypdf==6.6.0
-PyPDF2==3.0.1
-pypdfium2==4.30.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-docx==1.2.0
-python-dotenv==1.0.1
-python-json-logger==4.0.0
-python-multipart==0.0.20
-python-resize-image==1.1.20
-pytz==2025.1
-pywinpty==3.0.2
-PyYAML==6.0.2
-pyzmq==27.1.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.0.0
-rpds-py==0.23.1
-rsa==4.9
-ruff==0.13.1
-safehttpx==0.1.6
-safetensors==0.5.3
-seaborn==0.13.2
-selenium==4.28.1
-semantic-version==2.10.0
-Send2Trash==1.8.3
-sentence-transformers==5.0.0
-shap==0.49.1
-shellingham==1.5.4
-six==1.17.0
-sklearn-compat==0.1.3
-skorch==1.2.0
-slicer==0.0.8
-smart-open==7.1.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.8
-SQLAlchemy==1.4.54
-sqlparse==0.5.4
-srsly==2.5.1
-stack-data==0.6.3
-starlette==0.46.1
-streamlit==1.50.0
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==9.1.2
-termcolor==1.1.0
-terminado==0.18.1
-textblob==0.19.0
-threadpoolctl==3.5.0
-tifffile==2025.10.16
-tiktoken==0.9.0
-tinycss2==1.4.0
-tokenizers==0.21.0
-toml==0.10.2
-tomlkit==0.13.3
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.54.0
-trio==0.28.0
-trio-websocket==0.11.1
-typer==0.15.2
-typing_extensions==4.12.2
-tzdata==2025.1
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==2.3.0
-uuid_utils==0.13.0
-uv==0.9.17
-uvicorn==0.34.0
-virtualenv==20.35.4
-wasabi==1.1.3
-watchdog==6.0.0
-wcwidth==0.2.14
-weasel==0.4.1
-webcolors==24.11.1
-webdriver-manager==4.0.2
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.1.3
-widgetsnbextension==4.0.14
-win32_setctime==1.2.0
-wrapt==1.17.2
-wsproto==1.2.0
-xgboost==3.1.1
-xxhash==3.5.0
-yarl==1.18.3
-zipp==3.21.0
-zstandard==0.25.0
-
-
-
-
-
+Django>=4.2
+djangorestframework
+gunicorn
+python-dotenv
+requests
+PyPDF2
+cloudinary
+django-cors-headers
